made the first child flip open to the right and the rest to the left. this prevents the back from getting cut off

--- a/src/components/horizontal-slider/horizontalSlider.scss
+++ b/src/components/horizontal-slider/horizontalSlider.scss
@@ -27,7 +27,7 @@
       transition: all 0.8s ease, width 0s 0.2s;
 
       + li {
-        margin-left: 1rem;
+        margin-left: 1.5rem;
       }
 
       .front, .back {
@@ -55,7 +55,7 @@
       // TODO: Improve the glitch with this animation
       &:hover {
         z-index: 2;
-        transform: scale(1.3);
+        transform: scale(1.2);
 
         .front {
           z-index: -1;
@@ -65,7 +65,13 @@
         .back {
           z-index: unset;
           width: 160%;
-          transform: rotateY(0);
+          transform: rotateY(0) translateX(-5rem);
+        }
+
+        &:first-child {
+          .back {
+            transform: translateX(1rem);
+          }
         }
       }
     }
